dev-ontop+geoserver: Added GeoServer support, including setting up shapefile based layers during the "pgsql-uploader" process.

--- a/Deploy/stacks/ontop+geoserver/docker-compose.data_upload.yml
+++ b/Deploy/stacks/ontop+geoserver/docker-compose.data_upload.yml
@@ -25,6 +25,7 @@ services:
     env_file:
       - .env
       - postgis/postgres.env
+      - geoserver/geoserver.env
     security_opt:
       - label=disable
     volumes:
