--- a/Deploy/stacks/ontop+geoserver/pgsql-uploader/Dockerfile
+++ b/Deploy/stacks/ontop+geoserver/pgsql-uploader/Dockerfile
@@ -6,10 +6,11 @@ FROM python:${PYTHON_VERSION}-slim-buster
 RUN pip install csvkit psycopg2-binary
 
 # Install prerequisite apt packages
-RUN apt-get -qq update && apt-get -qq --yes install postgresql-client postgis gdal-bin unzip --no-install-recommends
+RUN apt-get -qq update && apt-get -qq --yes install postgresql-client postgis gdal-bin unzip gettext-base curl --no-install-recommends
 
 # Copy in entrypoint script, upload script
 COPY entrypoint.sh upload_to_pgsql.sh /
+COPY geoservertemplates/ /geoservertemplates/
 
 # Run the upload script, via the entrypoint script
 ENTRYPOINT /entrypoint.sh
