dev-ontop+geoserver: Removed "KEEP_ALIVE" flag from the docker-compose file and added "GEOSERVER_WORKSPACE" variable.

--- a/Deploy/stacks/ontop+geoserver/.env_template
+++ b/Deploy/stacks/ontop+geoserver/.env_template
@@ -10,6 +10,7 @@ POSTGRES_HOST=CONTAINER_HOST
 GEOSERVER_HOST=CONTAINER_HOST
 
 DEFAULT_DATABASE=PROJECT_ID
+GEOSERVER_WORKSPACE=PROJECT_ID
 NETWORK_NAME=PROJECT_ID
 
 # Shared data directory
