dev-kg_file_server: Added settings to the fileserver service in the db test stack so that a Java remote debugger can be attached to the Tomcat server.

--- a/Deploy/stacks/db/docker-compose.deploy.test.yml
+++ b/Deploy/stacks/db/docker-compose.deploy.test.yml
@@ -10,7 +10,6 @@
 
 version: "3.8"
 
-
 services:
 
   # Blazegraph
@@ -27,6 +26,9 @@ services:
   fileserver:
     ports:
       - 49086:8080
+      - 8000:8000
+    environment:
+      - JAVA_OPTS= -agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n
 
   # Postgres
   postgres:
