dev-kg_file_server: Moved the FileServer servelet config into the web.xml file so that it can be modified more easily. This can be done by setting the Docker args, specified in the Dockerfile, in the "build" docker compose file. The default values are specified in the pom.xml file.

--- a/Deploy/stacks/db/fileserver/Dockerfile
+++ b/Deploy/stacks/db/fileserver/Dockerfile
@@ -20,6 +20,11 @@ WORKDIR /root/build
 # Copy in source files ./m2 directory and credentials
 COPY ./fileserver .
 
+# Allow the overriding of the "multipart-config" settings for the servlet
+ARG MAX_FILE_SIZE
+ARG MAX_REQUEST_SIZE
+ARG FILE_SIZE_THRESHOLD
+
 RUN --mount=type=cache,target=/root/.m2/repository mvn package -P $mvn_profile
 #==================================================================================================
 
