--- a/Agents/PCEAgent/docker-compose.yml
+++ b/Agents/PCEAgent/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   oscml_agent:
     container_name: oscml_agent
-    image: docker.cmclinnovations.com/oscml_agent:1.0.0-SNAPSHOT
+    image: docker.cmclinnovations.com/oscml_agent:1.0.0
     build: .
     ports:
-      - "5000:5000"
+      - 5000:5000
