--- a/Agents/PCEAgent/deploy_models/pom.xml
+++ b/Agents/PCEAgent/deploy_models/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.cam.cares.jps.agent.oscml</groupId>
     <artifactId>trained_models</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <!-- Repository locations to deploy to (the IDs should match a server ID in your ~/.m2/settings.xml -->
     <distributionManagement>
