dev-chemaboxwriters: Split tests into abox output, setup and upload tests.

--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/tests/pytest.ini
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/tests/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -v -p no:xvfb -r a --doctest-glob= --showlocals  --html=tests/pytest_report.html
+addopts = -v -p no:xvfb -r a --doctest-glob= --showlocals  --html=tests/pytest_report.html --docker-compose=tests/abox_uploads_tests/docker_settings/docker-compose.yml
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning:cclib[.*]
