dev-update-project-versions: Updated project versions in repo, removed qualifiers

--- a/JPS_BLAZEGRAPH/pom.xml
+++ b/JPS_BLAZEGRAPH/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.ac.cam.cares.jps</groupId>
 	<artifactId>JPS_BLAZEGRAPH</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<dependencies>
 		<dependency>
