--- a/JPS_ACCESS_AGENT/access-agent/pom.xml
+++ b/JPS_ACCESS_AGENT/access-agent/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps</groupId>
   <artifactId>access-agent</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>war</packaging>
   <name>AccessAgent</name>
   
@@ -10,7 +10,7 @@
   <parent>
       <groupId>uk.ac.cam.cares.jps</groupId>
       <artifactId>jps-parent-pom</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
   </parent>
   
   <!-- Profiles are used to switch between building for development and production 
@@ -81,7 +81,7 @@
   	<dependency>
     	<groupId>uk.ac.cam.cares.jps</groupId>
     	<artifactId>jps-base-lib</artifactId>
-    	<version>1.6.0-SNAPSHOT-ACCESS-AGENT</version>
+    	<version>1.6.0</version>
     </dependency>
     
     <!-- Java servlet API -->
