--- a/JPS_BIODIESELPLANT/pom.xml
+++ b/JPS_BIODIESELPLANT/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>uk.ac.cam.cares.jps</groupId>
 		<artifactId>jps-parent-pom</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -112,7 +112,7 @@
 	  <dependency>
 		  <groupId>uk.ac.cam.cares.jps</groupId>
 		  <artifactId>jps-base-lib</artifactId>
-		  <version>1.5.0-SNAPSHOT</version>
+		  <version>1.6.0</version>
 		  <scope>compile</scope>
 	  </dependency>
 	  <dependency>
