--- a/JPS_NLP/pom.xml
+++ b/JPS_NLP/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>JPS_NLP</groupId>
   <artifactId>JPS_NLP</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
