--- a/JPS_THERMO/pom.xml
+++ b/JPS_THERMO/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.ac.cam.cares.jps.thermocalculation</groupId>
 	<artifactId>JPS_THERMO</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 
 	<build>
