--- a/ontology-tools/CMCLOntoChemExp/pom.xml
+++ b/ontology-tools/CMCLOntoChemExp/pom.xml
@@ -4,16 +4,16 @@
 
 	<groupId>com.cmclinnovations</groupId>
 	<artifactId>CMCLOntoChemExp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>CMCLOntoChemExp</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 		<rdf4j.version>2.0</rdf4j.version>
 		<!-- Version of the JPS Base Library to use -->
-        <jps.base.version>1.6.0-SNAPSHOT</jps.base.version>
+        <jps.base.version>1.6.0</jps.base.version>
 	</properties>
 
 	<distributionManagement>
