--- a/ontology-tools/CMCLOntoPrimeSpecies/pom.xml
+++ b/ontology-tools/CMCLOntoPrimeSpecies/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.cmclinnovations</groupId>
   <artifactId>CMCLOntoPrimeSpecies</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <name>CMCLOntoPrimeSpecies</name>
