--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
@@ -2,8 +2,8 @@
 # This is the aboxwriters config file used to specify all the writers settings.
 # The settings can be specified at three different levels of granularity:
 #
-# - global settings  - any settings defined here would apply to all
-#                       pipelines handlers
+# - global settings   - any settings defined here would apply to all
+#                       pipelines handlers, unless overwritten
 # - pipeline settings - any settings defined here would apply to all
 #                       handlers for the selected pipeline and would
 #                       overwrite any global settings
@@ -13,33 +13,35 @@
 # ------------------------------------------------------------------------------
 # GLOBAL
 # ------------------------------------------------------------------------------
-upload_settings:
-    triple_store_sparql_endpoint: default_triple_store_sparql_endpoint
-    #triple_store_secrets_file: default_triple_store_secrets_file
-    triple_store_no_auth: False # if True, no athorisation is made and the
-    #                            # triple store secrets file is not needed
-    file_server_upload_endpoint: default_file_server_upload_endpoint
-    #file_server_secrets_file: default_file_server_secrets_file
-    file_server_subdir: default_file_server_subdir
-    file_server_no_auth: False # if True, no athorisation is made and the
-    #                           # file server secrets file is not needed
-    # These settings define which files would be uploaded to the file server and
-    # or to the triple store by indicating the stages they belong to. These are
-    # global settings which would propagate to all defined pipelines and
-    # their handlers unless overwritten.
-    #
-    # upload_to_file_server:
-    #     - test_stage1
-    # upload_to_triple_store:
-    #     - test_stage2
-query_settings:
-    ospecies_query_endpoint: ospecies_query_endpoint
-    omops_query_endpoint: omops_query_endpoint
-    ocompchem_query_endpoint: ocompchem_query_endpoint
-    opsscan_query_endpoint: opsscan_query_endpoint
+file_server_upload_settings:
+    # file server upload url
+    url: http://localhost:48086/FileServer/
+    # file server secrets file
+    auth_file: dummy_fileserver_secrets_file
+    # if True, auth_file input is not needed
+    no_auth: False
+    # directory on the file server where all files should go
+    subdirs: dummy_subdir1/subdir2
+triple_store_upload_settings:
+    # triple store sparql upload endpoint
+    url: http://localhost:48083/blazegraph/namespace/kb/sparql/
+    auth_file: dummy_blazegraph-geo_secrets_file
+    no_auth: False
+kg_query_endpoints:
+    # define any sparql query endpoints for the given prefixes
+    # these are used in some handlers to query KG for extra information
+    # e.g. when creating the ontocompchem abox, a query is made based on
+    # the species inchi string to try to find the corresponding ontospecies
+    # entry
+    ospecies: http://localhost:48083/blazegraph/namespace/ospecies/sparql/
+    omops: http://localhost:48083/blazegraph/namespace/omops/sparql/
+    ocompchem: http://localhost:48083/blazegraph/namespace/ocompchem/sparql/
+    opsscan: http://localhost:48083/blazegraph/namespace/opsscan/sparql/
 prefixes:
     # these configs define any prefixes to be used when writing the aboxes
-    # the settings are then passed to the relevant handlers.
+    # the settings are then passed to the relevant handlers. Since most
+    # these prefixes are required in all csv to owl handlers, I decided to
+    # define them once in the global space.
     #
     # TWA ontology prefixes - needed for object and data properties
     onto_comp: "http://www.theworldavatar.com/ontology/ontocompchem/ontocompchem.owl"
@@ -49,9 +51,12 @@ prefixes:
     onto_kin: "http://www.theworldavatar.com/ontology/ontokin/OntoKin.owl"
     # used to create iris of instances
     spec_pref: "http://www.theworldavatar.com/kb/ontospecies/"
+    spec_pref_no_slash: "http://www.theworldavatar.com/kb/ontospecies"
     mops_pref: "http://www.theworldavatar.com/kb/ontomops/"
     comp_pref: "http://www.theworldavatar.com/kb/ontocompchem/"
+    comp_pref_no_slash: "http://www.theworldavatar.com/kb/ontocompchem"
     pes_pref: "http://www.theworldavatar.com/kb/ontopesscan/"
+    pes_pref_no_slash: "http://www.theworldavatar.com/kb/ontopesscan"
     # used to create iris of instances of any reference files
     # so far only defined for ontocompchem to reference associated log files
     ocompchem_data_pref: "http://www.theworldavatar.com/data/ontocompchem/"
@@ -65,17 +70,6 @@ prefixes:
     uom_pref: "http://www.ontology-of-units-of-measure.org/resource/om-2/"
     unres_pref: "http://theworldavatar.com/resource/ontouom/"
     omops_entry_prefix: "MetalOrganicPolyhedra_"
-
-#
-# these setting can be used to pass extra named arguments to all the handlers.
-# please note that not all handlers may support the extra arguments. It is usually
-# better to set the handler_kwargs at individual handler level
-#
-# handler_kwargs:
-#   arg1_name: arg1_value
-#   arg2_name: arg2_value
-#   arg3_name: arg3_value
-#   ...
 # ------------------------------------------------------------------------------
 # PIPELINES
 # ------------------------------------------------------------------------------
@@ -84,71 +78,93 @@ prefixes:
 #-----------------------------------------
 ocompchem:
     # these options would overwrite any global settings above
-    upload_settings:
-        file_server_subdir: ontocompchem
-        triple_store_sparql_endpoint: ontocompchem
+    file_server_upload_settings:
+        # this will overwrite the global "dummy_subdir1/subdir2" subdirs
+        # all other properties will be inherited
+        subdirs: ocompchem
+    triple_store_upload_settings:
+        # this will overwrite the global triple store upload url
+        # all other properties will be inherited
+        url: http://localhost:48083/blazegraph/namespace/ocompchem/sparql/
     #-----------------------------------------
-    # OCOMPCHEM HANDLERS
+    # SELECTED OCOMPCHEM HANDLERS
     #-----------------------------------------
     # these options define any handler specific settings and would overwrite
     # any pipeline and global settings
-    handlers:
-        qc_log_to_qc_json:
-            upload_settings:
-                upload_to_file_server:
-                    - qc_log
-        oc_csv_to_oc_owl:
-            upload_settings:
-                upload_to_triple_store:
-                    - oc_owl
+    #
+    # handler 1
+    qc_log_to_qc_json: # handler name, non-case specific
+        file_server_upload_settings:
+            # this defines which types of files should be uploaded to the file server
+            upload_file_types:
+                - qc_log
+    # handler 2
+    qc_json_to_oc_json:
+        # this passes extra parameters to the handler
+        # run "aboxwriter <pipeline_name> --info" to check
+        # supported parameters
+        handler_kwargs:
+            random_id: testID-111-111-111
+            ontospecies_IRI: test_species_iri
+    # handler 3
+    oc_csv_to_oc_owl:
+        triple_store_upload_settings:
+            # this defines which types of files should be uploaded to the file server
+            upload_file_types:
+                - oc_owl
 # OSPECIES
 #-----------------------------------------
 ospecies:
-    upload_settings:
-        file_server_subdir: ospecies
-        triple_store_sparql_endpoint: ospecies
+    file_server_upload_settings:
+        subdirs: ospecies
+    triple_store_upload_settings:
+        url: http://localhost:48083/blazegraph/namespace/ospecies/sparql/
     #-----------------------------------------
-    # OSPECIES HANDLERS
+    # SELECTED OSPECIES HANDLERS
     #-----------------------------------------
-    handlers:
-        os_csv_to_os_owl:
-            upload_settings:
-                upload_to_triple_store:
-                    - os_owl
+    qc_json_to_os_json:
+        handler_kwargs:
+            random_id: testID-111-111-111
+    os_csv_to_os_owl:
+        triple_store_upload_settings:
+            upload_file_types:
+                - os_owl
 # OMOPS
-#-----------------------------------------
 omops:
-    upload_settings:
-        file_server_subdir: omops
-        triple_store_sparql_endpoint: omops
+    file_server_upload_settings:
+        subdirs: omops
+    triple_store_upload_settings:
+        url: http://localhost:48083/blazegraph/namespace/omops/sparql/
     #-----------------------------------------
-    # OMOPS HANDLERS
+    # SELECTED OMOPS HANDLERS
     #-----------------------------------------
-    handlers:
-        ominp_json_to_om_json:
-            upload_settings:
-                upload_to_file_server:
-                    - ominp_xyz
-        om_csv_to_om_owl:
-            upload_settings:
-                upload_to_triple_store:
-                    - om_owl
+    ominp_json_to_om_json:
+        file_server_upload_settings:
+            upload_file_types:
+                - ominp_xyz
+        handler_kwargs:
+            random_id: testID-111-111-111
+    om_csv_to_om_owl:
+        triple_store_upload_settings:
+            upload_file_types:
+                - om_owl
 # OPSSCAN
 #-----------------------------------------
 opsscan:
-    upload_settings:
-        file_server_subdir: opsscan
-        triple_store_sparql_endpoint: opsscan
+    file_server_upload_settings:
+        subdirs: opsscan
+    triple_store_upload_settings:
+        url: http://localhost:48083/blazegraph/namespace/opsscan/sparql/
     #-----------------------------------------
-    # OPSSCAN HANDLERS
+    # SELECTED OPSSCAN HANDLERS
     #-----------------------------------------
-    handlers:
-        oc_json_to_ops_json:
-            handler_kwargs:
-                os_iris: "dummy_iri1"
-                os_atoms_iris: "dummy_atom1_iri, dummy_atom2_iri"
-                oc_atoms_pos: "1,3"
-        ops_csv_to_ops_owl:
-            upload_settings:
-                upload_to_triple_store:
-                    - ops_owl
+    oc_json_to_ops_json:
+        handler_kwargs:
+            os_iris: Species_11-111-111
+            os_atoms_iris: Atom_11-11-111_C1,Atom_11-11-111_C2
+            oc_atoms_pos: 1,2
+            random_id: OPStestID-111-111-11
+    ops_csv_to_ops_owl:
+        triple_store_upload_settings:
+            upload_file_types:
+                - ops_owl
