--- a/Agents/CARESWeatherStationAgent/CARESWeatherStationInputAgent/pom.xml
+++ b/Agents/CARESWeatherStationAgent/CARESWeatherStationInputAgent/pom.xml
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <jps.base.version>1.4.0-SNAPSHOT</jps.base.version>
+        <jps.base.version>1.6.0</jps.base.version>
 
     </properties>
 
@@ -21,7 +21,7 @@
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <!-- Profiles are used to switch between building for development and production
