--- a/Agents/CARESWeatherStationAgent/config/client.properties
+++ b/Agents/CARESWeatherStationAgent/config/client.properties
@@ -6,6 +6,13 @@ db.user=postgres
 # Password to connect to postgreSQL database
 db.password=postgres
 #SPARQL Query endpoint of triple store
+#use when running locally
 sparql.query.endpoint=http://host.docker.internal:9999/blazegraph/namespace/weatherStationCARES/sparql
+#use when running on Claudius
+#sparql.query.endpoint=http://www.theworldavatar.com/blazegraph/namespace/weatherStationCARES/sparql
+
 #SPARQL Update endpoint of triple store
+#use when running locally
 sparql.update.endpoint=http://host.docker.internal:9999/blazegraph/namespace/weatherStationCARES/sparql
+#use when running on Claudius
+#sparql.query.endpoint=http://www.theworldavatar.com/blazegraph/namespace/weatherStationCARES/sparql
