--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
@@ -100,6 +100,14 @@ ocompchem:
                 - qc_log
     # handler 2
     qc_json_to_oc_json:
+        file_server_upload_settings:
+            # this enables molecules png files upload (if files are present)
+            upload_file_types:
+                - oc_png
+        handler_kwargs:
+            # this enables molecules png files generation
+            generate_png: true
+
     # handler 3
     oc_csv_to_oc_owl:
         triple_store_upload_settings:
