dev-MetOfficeAgent: Include updated pytest.ini

--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -1,7 +1,7 @@
 ###--- Properties for Python agent ---###
 
 # MetOffice DataPoint API key
-api.key = 
+api.key = key
 
 # Output directory for (Geo)JSON files containing retrieved data
 #output.directory = ./dtvf_visualisation/queried_data
