--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -16,7 +16,7 @@ api.key = key
 ###--- Properties for JAVA TimeSeriesClient ---###
 
 # URL to connect to PostgreSQL database
-db.url = jdbc:postgresql:metoffice
+db.url = jdbc:postgresql:metoffice2
 
 # Username to connect to PostgreSQL database
 db.user = postgres
