dev-MetOfficeAgent: Added HTTP route to instantiate readings

--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -1,7 +1,7 @@
 ###--- Properties for Python agent ---###
 
 # MetOffice DataPoint API key
-api.key = key
+api.key = 781fcade-8eaa-44c7-84e8-014f92857aa1
 
 # Output directory for (Geo)JSON files containing retrieved data
 #output.directory = ./dtvf_visualisation/queried_data
@@ -16,7 +16,7 @@ api.key = key
 ###--- Properties for JAVA TimeSeriesClient ---###
 
 # URL to connect to PostgreSQL database
-db.url = jdbc:postgresql:metoffice2
+db.url = jdbc:postgresql:metoffice
 
 # Username to connect to PostgreSQL database
 db.user = postgres
