--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
@@ -24,7 +24,7 @@ location /dev/portainer/prod-web/ {
 location = /cdn {
     return 301 $scheme://$http_host$uri/;
 }
-location cdn/ {
+location /cdn/ {
     proxy_pass             http://web_public-ftp/;
     proxy_set_header       Host $host;
     proxy_set_header       X-Real-IP $remote_addr;
