--- a/Agents/DerivationExample/DerivationExample/pom.xml
+++ b/Agents/DerivationExample/DerivationExample/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <build>
         <resources>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>uk.ac.cam.cares.jps</groupId>
             <artifactId>jps-base-lib</artifactId>
-            <version>1.5.0-SNAPSHOT</version>
+            <version>1.6.0-154-dev-unified-derivation-framework-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
