154-dev-unified-derivation-framework: added scope for log4j-web dependency in DerivationAsynExample pom.xml file.

--- a/Agents/DerivationAsynExample/DerivationAsynExample/pom.xml
+++ b/Agents/DerivationAsynExample/DerivationAsynExample/pom.xml
@@ -137,6 +137,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
+            <scope>runtime</scope>
         </dependency>
         
         <!-- Testing, versions pulled from parent -->
