--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -1,17 +1,7 @@
-###--- Properties for Python agent ---###
+###--- Properties for MetOffice Agent agent ---###
 
 # MetOffice DataPoint API key
-api.key = 781fcade-8eaa-44c7-84e8-014f92857aa1
-
-# Output directory for (Geo)JSON files containing retrieved data
-#output.directory = ./dtvf_visualisation/queried_data
-
-
-###--- Properties for Digital Twin Visualisation Framework ---###
-
-# Mapbox API key (to be copied to "overall-meta.json" file)
-#mapbox.apiKey =
-
+api.key = key
 
 ###--- Properties for JAVA TimeSeriesClient ---###
 
