--- a/Agents/DerivationAsynExample/docker-compose.yml
+++ b/Agents/DerivationAsynExample/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "58085:8080"
 
   blazegraph:
-    container_name: "blazegraph"
+    container_name: "blazegraph_dae"
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
       BLAZEGRAPH_PASSWORD_FILE: /run/secrets/blazegraph_password
