--- a/Agents/DerivationExample/DerivationExample/pom.xml
+++ b/Agents/DerivationExample/DerivationExample/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.cam.cares.derivation</groupId>
     <artifactId>DerivationExample</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>war</packaging>
     <!-- Parent POM -->
     <parent>
