--- a/Agents/ESPHomeUpdateAgent/ESPHomeUpdateAgent/pom.xml
+++ b/Agents/ESPHomeUpdateAgent/ESPHomeUpdateAgent/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.cam.cares.jps</groupId>
     <artifactId>esphome-update-agent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
     
     
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <jps.base.version>1.4.0-SNAPSHOT</jps.base.version>
+        <jps.base.version>1.6.0</jps.base.version>
        
     </properties>
 
@@ -21,7 +21,7 @@
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <!-- Profiles are used to switch between building for development and production
@@ -139,7 +139,7 @@
             <artifactId>log4j-web</artifactId>
             <version>2.17.0</version>
         </dependency>
-        
+
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -180,14 +180,20 @@
             <version>1.15.3</version>
             <scope>test</scope>
         </dependency>
-         <!-- Used to mock environment variables in testing -->
+        <!-- Used to mock environment variables in testing -->
         <dependency>
             <groupId>com.github.stefanbirkner</groupId>
             <artifactId>system-lambda</artifactId>
             <version>1.2.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
-    
+
 </project>
