--- a/Agents/ESPHomeUpdateAgent/config/agent.properties
+++ b/Agents/ESPHomeUpdateAgent/config/agent.properties
@@ -1,2 +1,2 @@
-# THINGSBOARD_AGENT_MAPPINGS is the environment variable pointing to the location of the mapping folder. #
-thingsboard.mappingfolder=THINGSBOARD_AGENT_MAPPINGS
+# ESPHOME_AGENT_MAPPINGS is the environment variable pointing to the location of the mapping folder. #
+esphome.mappingfolder=ESPHOME_UPDATE_AGENT_MAPPINGS
