--- a/Agents/ESPHomeUpdateAgent/config/api.properties
+++ b/Agents/ESPHomeUpdateAgent/config/api.properties
@@ -1,10 +1,6 @@
-#--ThingsBoard API properties--#
+#--ESPHome API properties--#
 # Username and password
-thingsboard.username=tenant@thingsboard.org
-thingsboard.password=CARES1010
+esphome.domain=switch
+domain.ID=generic_output
 # The default port should be 8080 but can be changed.
-path.url=http://www.theworldavatar.com:83
-# Which device to retrieve data from
-device.id=c05c59d0-570a-11ec-a143-d14ed3d0d946
-# What parameters to retrieve
-keys=Current,Voltage,Power,Energy,PF,Temp,Humidity,IntTemp
+path.url=http://192.168.50.222
