--- a/Agents/ESPHomeUpdateAgent/config/mappings/domainID.properties
+++ b/Agents/ESPHomeUpdateAgent/config/mappings/domainID.properties
@@ -1,9 +1,3 @@
 #-- Leaving the IRI empty will automatically generate an IRI --#
-Current=
-Voltage=
-Power=
-Energy=
-PF=
-Temp=
-Humidity=
-IntTemp=
+generic_output=
+
