--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -4,9 +4,13 @@
 api.key = key
 
 ###--- Properties for JAVA TimeSeriesClient ---###
+# Need to be changed based on the setup of the system:
+# 172.17.0.1 is the default host IP seen from the container and can be used to access services running on the host (Linux).
+# On Docker for Mac or Windows host.docker.internal should work instead.
 
 # URL to connect to PostgreSQL database
-db.url = jdbc:postgresql:metoffice
+#db.url = jdbc:postgresql:metoffice_test
+db.url = jdbc:postgresql://host.docker.internal:5432/metoffice_test
 
 # Username to connect to PostgreSQL database
 db.user = postgres
@@ -15,5 +19,7 @@ db.user = postgres
 db.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store
-sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/metoffice/sparql
-sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/metoffice/sparql
+#sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/metoffice_test/sparql
+#sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/metoffice_test/sparql
+sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice_test/sparql
+sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice_test/sparql
