--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -9,8 +9,8 @@ api.key = key
 # On Docker for Mac or Windows host.docker.internal should work instead.
 
 # URL to connect to PostgreSQL database
-#db.url = jdbc:postgresql:metoffice_test
-db.url = jdbc:postgresql://host.docker.internal:5432/metoffice_test
+#db.url = jdbc:postgresql:metoffice
+db.url = jdbc:postgresql://host.docker.internal:5432/metoffice
 
 # Username to connect to PostgreSQL database
 db.user = postgres
@@ -19,7 +19,7 @@ db.user = postgres
 db.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store
-#sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/metoffice_test/sparql
-#sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/metoffice_test/sparql
-sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice_test/sparql
-sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice_test/sparql
+#sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/metoffice/sparql
+#sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/metoffice/sparql
+sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice/sparql
+sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice/sparql
