dev-simple-mods-agent: Added missing depenency entry for the Apache CSV commons library.

--- a/Agents/MoDSSimpleAgent/mods-simple-agent/pom.xml
+++ b/Agents/MoDSSimpleAgent/mods-simple-agent/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.cmclinnovations.mods</groupId>
 			<artifactId>MoDS_API</artifactId>
 			<version>0.15.0</version>
