--- a/Agents/MoDSSimpleAgent/mods-simple-agent/pom.xml
+++ b/Agents/MoDSSimpleAgent/mods-simple-agent/pom.xml
@@ -71,6 +71,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<requiresUnpack>
+						<dependency>
+							<groupId>com.cmclinnovations.mods</groupId>
+							<artifactId>MoDS_API</artifactId>
+						</dependency>
+					</requiresUnpack>
+				</configuration>
 			</plugin>
 			<plugin>
 				<!-- This plugin copies all of the .jar dependencies into a 'lib' folder in the target directory. -->
