dev-esphome-agent: Modify client.properties

--- a/Agents/ESPHomeAgent/config/client.properties
+++ b/Agents/ESPHomeAgent/config/client.properties
@@ -3,11 +3,11 @@
 #  172.17.0.1 is the default host IP seen from the container and can be used to access services running on the host (Linux).
 #  On Docker for Mac or Windows host.docker.internal should work instead.
 # URL to connect to postgreSQL database
-db.url=jdbc:postgresql://128.199.197.40:45431/postgres
+db.url=jdbc:postgresql://host.docker.internal:5432/postgres
 # Username to connect to postgreSQL database
 db.user=postgres
 # Password to connect to postgreSQL database
-db.password=KDt77vZAjFbzgKzA
+db.password=postgres
 #SPARQL Query endpoint of triple store
 sparql.query.endpoint=http://www.theworldavatar.com/blazegraph/namespace/thingsboard/sparql
 #SPARQL Update endpoint of triple store 
