dev-simple-mods-agent: Added the MoDS Simple Agent to the agents stack.

--- a/Deploy/stacks/agent/docker-compose.deploy.live.yml
+++ b/Deploy/stacks/agent/docker-compose.deploy.live.yml
@@ -56,3 +56,8 @@ services:
   weather-agent:
     ports:
       - "48085:8080"
+
+  # MoDS Agent
+  mods-simple-agent:
+    ports:
+      - "58085:8080"
