--- a/Deploy/stacks/agent/docker-compose.deploy.yml
+++ b/Deploy/stacks/agent/docker-compose.deploy.yml
@@ -145,6 +145,15 @@ services:
     volumes:
       - WAlogs:/root/.jps
 
+  # MoDS Agent
+  mods-simple-agent:
+    image: docker.cmclinnovations.com/mods_simple_agent:0.0.1
+    container_name: mods_simple_agent
+    environment:
+      CMCL_LICENSE_PATH: "/run/secrets/mods_agent_licence"
+    secrets:
+      - mods_agent_licence
+
 # The default network name is set using a docker-compose environment variable.
 # Please don't modify the contents of the 'networks' node below.
 networks:
@@ -156,6 +165,8 @@ networks:
 secrets:
   weather_agent_credentials:
     file: WeatherAgent/secrets/credentials.properties.${MODE}
+  mods_agent_licence:
+    file: MoDSAgent/secrets/docker-agent-licence.lic
 
 volumes:
   driver:
