--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
@@ -50,6 +50,10 @@ upstream agent_weather {
     server 192.168.1.177:48085;
 }
 
+upstream agent_mods {
+    server 192.168.1.177:58085;
+}
+
 # Public FTP
 upstream web_public-ftp {
     server public-ftp:80;
