--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -206,6 +206,19 @@ location /mods-agent/ {
     proxy_set_header       X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header       X-Forwarded-Host $server_name;
     proxy_set_header       X-Forwarded-Proto $scheme;
+
+location = /mods-cuds-agent/cuds/ {
+    return 301 $scheme://$http_host$uri/;
+}
+
+location /mods-agent/cuds/ {
+    proxy_pass             http://agent_mods_cuds_wrapper/;
+    proxy_set_header       Host $host;
+    proxy_set_header       X-Real-IP $remote_addr;
+    proxy_set_header       X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header       X-Forwarded-Host $server_name;
+    proxy_set_header       X-Forwarded-Proto $scheme;
+
 #    proxy_connect_timeout  300;
 #    proxy_send_timeout     300;
 #    proxy_read_timeout     300;
