--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
@@ -54,6 +54,10 @@ upstream agent_mods {
     server 192.168.1.177:58085;
 }
 
+upstream agent_mods_cuds_wrapper {
+    server 192.168.1.177:58086;
+}
+
 # Public FTP
 upstream web_public-ftp {
     server public-ftp:80;
