dev-simple-mods-agent: Corrected redirect for the MoDS Agent CUDS endpoint.

--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -207,7 +207,7 @@ location /mods-agent/ {
     proxy_set_header       X-Forwarded-Host $server_name;
     proxy_set_header       X-Forwarded-Proto $scheme;
 
-location = /mods-cuds-agent/cuds/ {
+location = /mods-agent/cuds {
     return 301 $scheme://$http_host$uri/;
 }
 
