--- a/JPS_ACCESS_AGENT/access-agent/pom.xml
+++ b/JPS_ACCESS_AGENT/access-agent/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps</groupId>
   <artifactId>access-agent</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.2.1</version>
   <packaging>war</packaging>
   <name>AccessAgent</name>
   
