--- a/JPS_ACCESS_AGENT/access-agent/pom.xml
+++ b/JPS_ACCESS_AGENT/access-agent/pom.xml
@@ -81,7 +81,7 @@
   	<dependency>
     	<groupId>uk.ac.cam.cares.jps</groupId>
     	<artifactId>jps-base-lib</artifactId>
-    	<version>1.9.0-STOREROUTER-SNAPSHOT</version>
+    	<version>1.9.1</version>
     </dependency>
    
     <!-- Java servlet API -->
