1315-instantiate-nus-davis-weather-station:1) An additional comment was added in the client.prop file.

--- a/Agents/NUSDavisWeatherStationAgent/config/client.properties
+++ b/Agents/NUSDavisWeatherStationAgent/config/client.properties
@@ -1,5 +1,8 @@
 # URL to connect to postgreSQL database
+#use when running locally
 db.url=jdbc:postgresql://host.docker.internal:5432/nusWeatherTimeSeriesTest
+#use when running on Claudius
+#db.url=jdbc:postgresql://172.17.0.1:5432/nusWeatherTimeSeriesTest
 # Username and password will be read from the credentials when creating the image. Do not change!
 # Username to connect to postgreSQL database
 db.user=postgres
