dev-stack-manager: Added a name for each stack and changed the 'ServiceConfig' class to use the Docker API's 'HostConfig' class to define most of the settings for a container.

--- a/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/services/defaults/nginx.json
+++ b/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/services/defaults/nginx.json
@@ -1,7 +1,13 @@
 {
     "name": "nginx",
     "image": "nginx:1.19.6",
-    "ports": {
-        "main": "8080:80"
+    "HostConfig": {
+        "PortBindings": {
+            "80": [
+                {
+                    "HostPort": "8080"
+                }
+            ]
+        }
     }
 }
