--- a/Deploy/stacks/dynamic/stack-manager/pom.xml
+++ b/Deploy/stacks/dynamic/stack-manager/pom.xml
@@ -16,6 +16,18 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>GeoSolutions</id>
+      <url>https://maven.geo-solutions.it/</url>
+    </repository>
+
+    <repository>
+      <id>clojars.org</id>
+      <url>https://clojars.org/repo</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java -->
     <dependency>
@@ -28,6 +40,18 @@
       <groupId>com.github.docker-java</groupId>
       <artifactId>docker-java-transport-httpclient5</artifactId>
       <version>3.2.13</version>
+    </dependency>
+
+    <dependency>
+      <groupId>it.geosolutions</groupId>
+      <artifactId>geoserver-manager</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>nginx-clojure</groupId>
+      <artifactId>nginx-clojure</artifactId>
+      <version>0.5.3</version>
     </dependency>
 
     <dependency>
